# ros_sgp_tools

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  source.sh
config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml
launch/: aipp_service.launch.py  apm_pluginlists.yaml  asv.launch.py  auv.launch.py  epic.plan  lake.plan  lake_gt.csv  launch.py  lawn_mower.launch.py  mavros.launch  mavros.launch.py  move_base_mapless.launch  multi_laptop.launch.py  multi_robot.launch.py  multi_server.launch.py  multi_sgp_ipp.launch  multi_sgp_ipp_limo.launch  multi_turtlebot3_demo.launch  sample.plan  sgp_ipp.launch  sgp_ipp_robot.launch  single_robot.launch.py  trail.plan  traj.launch  traj_robot.launch  traj_robot_test.launch  traj_test.launch  uav_single_robot.launch.py  visualize_data.launch.py  woodward.plan
launch/data/: config.yaml  lawn_mover_mission.plan  lawn_mover_mission_5x5.plan  local_mission.plan  mission.plan  viz_config.yaml
launch/params/: apm_config.yaml
launch/plans/: lake.plan
models/blueboat/: model.sdf
models/blueboat_approx/: model.sdf
models/calm_waves/: model.sdf
models/sand_heightmap/: model.sdf
models/srtm/: model.config  model.sdf
msg/: ETA.msg  IPPData.msg  RSSI.msg  SensorData.msg
rviz/: turtlebot3_navigation_mapless.rviz
scripts/: adaptive_ipp_planner.py  aipp_service.py  aqua_controller.py  asv_postprocess.ipynb  auv_postprocess.ipynb  base_planner.py  candidates.csv  controllers.py  coverage_planner.py  data_mapper.py  data_publisher.py  data_visualizer.py  depth_publisher.py  gazebo_pose_publisher.py  guided_mission.py  ipp_mission.py  ipp_planner.py  lake_depth_publisher.py  low_level_planner.py  mission_gen.ipynb  move2goal.py  offlineIPP.py  offline_ipp.py  onlineIPP.py  onlineTest.py  online_ipp.py  optitrack2odom.py  optitrack_frame.py  path_follower.py  path_planner.py  postprocess.ipynb  regenerate_mission.py  rssi_mapper.py  rssi_publisher.py  rssi_publisher_pi.py  sensors.py  trajectory_planner.py  uav_depth_publisher.py  uav_guided_mission.py  uav_ipp_mission.py  (+3 more)
srv/: IPP.srv  OfflineIPP.srv  Waypoint.srv  Waypoints.srv
worlds/: blueboat.world  blueboat_waves.sdf  blueboat_waves.world
